# RAG_streamlit

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  test.py
app/api/: main.py  routes.py  schemas.py
app/config/: settings.py
app/container/: container.py
app/core/: exceptions.py  logger.py
app/embedding/: embedder.py
app/ingestion/: loader.py  pipeline.py  splitter.py
app/llm/: ollama_client.py
app/prompt/: builder.py
app/query/: query_pipeline.py
app/retriever/: retriever.py
app/services/: document_service.py
app/storage/: document_manager.py
app/vectorstore/: chroma_store.py
data/vector_db/66a270b9-19f3-471d-81d8-4c2fbfe6c461/: index_metadata.pickle
frontend/: app.py
frontend/api/: client.py
frontend/components/: slidebar.py
scripts/: ingest.py  query.py
